--- a/style.css
+++ b/style.css
@@ -61,14 +61,14 @@ html {
   text-align: center;
 
   color: var(--main-black-color);
-  font-size: 3.6rem;
-  font-family: "homemade apple", sans-serif;
+  font-size: 2.8rem;
+  font-family: "Homemade Apple", sans-serif;
   text-transform: lowercase;
 }
 
 .header-btn {
-  font-size: 1.8rem;
-  font-family: "bungee", sans-serif;
+  font-size: 1.2rem;
+  font-family: "Bungee", sans-serif;
 
   padding: 16px;
   cursor: pointer;
@@ -78,11 +78,11 @@ html {
   outline: unset;
 }
 
-.header-btn.main-red-color :active {
+.header-btn.main-red-color:active {
   text-shadow: 1px 1px 2px var(--main-red-color);
 }
 
-.header-btn.main-black-color :active {
+.header-btn.main-black-color:active {
   text-shadow: 1px 1px 2px var(--main-black-color);
 }
 
@@ -111,7 +111,7 @@ html {
 }
 
 .add-btn {
-  font-size: 1.6rem;
+  font-size: 1.2rem;
   font-family: "Bungee", sans-serif;
 
   padding: 16px;
@@ -123,7 +123,7 @@ html {
   outline: unset;
 }
 
-.add-btn.main-black-color :active {
+.add-btn.main-black-color:active {
   text-shadow: 1px 1px 2px var(--main-black-color);
 }
 
@@ -138,7 +138,7 @@ html {
   flex: 1 0 auto;
   text-align: center;
 
-  min-height: 34px;
+  min-height: 36px;
   margin: 16px 0 0;
   font-family: "Homemade Apple", sans-serif;
   font-size: 24px;
